--- a/style/media.css
+++ b/style/media.css
@@ -3,6 +3,12 @@
         flex-wrap: wrap;
         flex-direction: column;
     }
+    .box__properties{
+        justify-content: space-evenly;
+    }
+    .box__bayers{
+        justify-content: space-evenly;
+    }
     .footer img{
         width: 900px;
     }
@@ -88,5 +94,38 @@
     .footer img{
         width: 300px;
     } 
-    
+}
+@media (max-width:465px) {
+    .main__link {
+        margin-top: 50px; 
+        margin-bottom: 20px;
+    }
+}
+@media (max-width:440px){
+    .community__feedback-p{
+        padding: 10px 5px;
+    }
+    .community__feedback-content{
+        max-width: 260px;
+    }
+    .box__img2{
+        margin-left: 20px;
+        margin-right: 15px;
+    }
+    .box__content2{
+        margin-right:20px;
+    } 
+    .box__img1{
+        margin-left: 20px;
+        margin-right: 15px;
+    }
+    .box__content1{
+        margin-right:20px;
+    } 
+    .header__menu-list-link{
+        padding-right: 10px;
+    }
+    .projects__card{
+        margin-right: 0;
+    }
 }
